Update from curriculum repo

--- a/module-1/lesson-1/Financial_Econometrics_Module_1_Lesson_1.ipynb
+++ b/module-1/lesson-1/Financial_Econometrics_Module_1_Lesson_1.ipynb
@@ -326,7 +326,7 @@
     "grid = grid.map_upper(corr)\n",
     "\n",
     "# Map a histogram to the diagonal\n",
-    "grid = grid.map_diag(plt.hist)\n",
+    "# grid = grid.map_diag(plt.hist)\n",
     "\n",
     "# Map a density plot to the lower triangle\n",
     "grid = grid.map_lower(sns.kdeplot)"
@@ -845,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
