--- a/module-1/lesson-3/Financial_Econometrics_Module 1_Lesson 3.ipynb
+++ b/module-1/lesson-3/Financial_Econometrics_Module 1_Lesson 3.ipynb
@@ -313,7 +313,7 @@
     "$$\n",
     "\n",
     "$$ \n",
-    "PC_1 = a_1 \\text{Var}_1 + a_2 \\text{Var}_2\n",
+    "PC_2 = b_1 \\text{Var}_1 + b_2 \\text{Var}_2\n",
     "$$"
    ]
   },
