--- a/module-2/lesson-3/Financial_Econometrics_Module 2_Lesson 3.ipynb
+++ b/module-2/lesson-3/Financial_Econometrics_Module 2_Lesson 3.ipynb
@@ -436,7 +436,7 @@
     "\n",
     "Here are the steps to run the three models.\n",
     "\n",
-    "1. Split the data into a training dataset and a testing dataset. We split the whole dataset into 70% for training data and 30% for testing data.\n",
+    "1. Split the data into a training dataset and a testing dataset. We split the whole dataset into 80% for training data and 20% for testing data.\n",
     "2. We first run the OLS regression on the training dataset to get the OLS model. We record the OLS coefficients. Then, we plug the test dataset into the OLS model to calculate test $R^2$ and test mean squared error.\n",
     "3. We then run the ridge regression. We first set a range of values for $\\lambda$. We then run 10-fold cross validation to get the optimal $\\lambda$ from the training data. Once we get the optimal $\\lambda$, we run the final ridge regression on the training data and get the coefficients. Once we get the ridge regression model, we plug test dataset into ridge regression model and calculate test $R^2$ and test mean squared error.\n",
     "4. Lastly, we run the lasso regression. We do the same as what we did for ridge regression. We set a range of values for $\\lambda$ and run 10-fold cross validation to get optimal $\\lambda$. We then run the final lasso regression and get the coefficients. After getting the lasso regression model, we plug in testing data to calculate test $R^2$ and test mean squared error.\n"
@@ -526,7 +526,7 @@
     "ols_rss = np.sum(np.power(ols_pred.ols_p - ols_actual, 2))\n",
     "ols_tss = np.sum(np.power(ols_actual - np.mean(ols_actual), 2))\n",
     "ols_rsq = 1 - (ols_rss / ols_tss)\n",
-    "print(\"\\n OLS_R^2\", ols_rss)\n",
+    "print(\"\\n OLS_R^2\", ols_rsq)\n",
     "\n",
     "ols_MSE = np.sqrt(ols_rss / test.shape[0])\n",
     "print(\" OLS_SME\", ols_MSE)"
