--- a/module-3/lesson-2/Lesson Notes - ECON_Module 3_Lesson 2.ipynb
+++ b/module-3/lesson-2/Lesson Notes - ECON_Module 3_Lesson 2.ipynb
@@ -217,7 +217,7 @@
     "id": "jl-HxrmN_zk7"
    },
    "source": [
-    "## **3. Kurtosis**"
+    "## **2. Kurtosis**"
    ]
   },
   {
@@ -243,18 +243,16 @@
    "outputs": [],
    "source": [
     "# Three distributions with different tail shapes\n",
-    "x = np.linspace(0, 40, 100)\n",
-    "y1 = stats.norm.pdf(x, loc=25, scale=1.75)\n",
-    "y2 = stats.norm.pdf(x, loc=25, scale=2.1292292766)\n",
-    "y3 = stats.norm.pdf(x, loc=25, scale=2.75)\n",
+    "x = np.linspace(0, 60, 100)\n",
+    "y1 = stats.norm.pdf(x, loc=30, scale=2.450)\n",
+    "y2 = stats.norm.pdf(x, loc=30, scale=3.194)\n",
+    "y3 = stats.norm.pdf(x, loc=30, scale=4.450)\n",
     "\n",
     "# Plot each distribution\n",
     "plt.figure(figsize=(12, 7))\n",
-    "plt.plot(x, y1, lw=2, c=\"b\", label=\"Heavy tail:  Kurtosis={:.2f}\".format(kurtosis(y1)))\n",
-    "plt.plot(x, y2, lw=2, c=\"r\", label=\"Normal:       Kurtosis={:.2f}\".format(kurtosis(y2)))\n",
-    "plt.plot(\n",
-    "    x, y3, lw=2, c=\"k\", label=\"Light tail:     Kurtosis={:.2f}\".format(kurtosis(y3))\n",
-    ")\n",
+    "plt.plot(x, y1, c=\"b\", label=\"Heavy tail: Kurtosis={:.2f}\".format(kurtosis(y1)))\n",
+    "plt.plot(x, y2, c=\"r\", label=\"Normal:     Kurtosis={:.2f}\".format(kurtosis(y2)))\n",
+    "plt.plot(x, y3, c=\"k\", label=\"Light tail:   Kurtosis={:.2f}\".format(kurtosis(y3)))\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -265,7 +263,7 @@
     "id": "Hs8qxScnBfv-"
    },
    "source": [
-    "From figure 3, the red curve is a normal distribution. We can see all three distributions are symmetric distributions centered around 25. However, compared to the normal distribution, the blue-curve distribution exhibits a higher peak around 25. This means that the blue-curve assigns a higher probability than normal distribution around 25. However, the blue-curve distribution assigns less probability than a normal distribution in the region of (20, 24) and (26, 30). Also, the blue-curve distribution has higher probability than the normal distribution on both ends of the curve. **Higher peak, skinnier body, and longer tails than normal distribution make the blue-curve distribution a heavy tail distribution**. On the other hand, the black-curve distribution has a lower peak than normal distribution around 25. The black-curve distribution has higher probability than normal distribution in the region of (20, 24) and (26, 30) and has lower probability and shorter tails on both ends of the curve compared to normal distribution. **Lower peak, fatter body, and shorter tails than normal distribution makes the black-curve distribution a light tail distribution**.\n",
+    "From figure 3, the red curve is a normal distribution. We can see all three distributions are symmetric distributions centered around 30. However, compared to the normal distribution, the blue-curve distribution exhibits a higher peak around 30. This means that the blue-curve assigns a higher probability than normal distribution around 30. However, the blue-curve distribution assigns less probability than a normal distribution in the region of (20, 26) and (34, 40). Also, the blue-curve distribution has higher probability than the normal distribution on both ends of the curve. **Higher peak, skinnier body, and longer tails than normal distribution make the blue-curve distribution a heavy tail distribution**. On the other hand, the black-curve distribution has a lower peak than normal distribution around 30. The black-curve distribution has higher probability than normal distribution in the region of (16, 26) and (34, 44) and has lower probability and shorter tails on both ends of the curve compared to normal distribution. **Lower peak, fatter body, and shorter tails than normal distribution makes the black-curve distribution a light tail distribution**.\n",
     "\n",
     "By the tail shape of a symmetric distribution, a normal distribution is called **mesokurtic**. A fat tail distribution is called **leptokurtic**. A light tail distribution is called **platykurtic**.\n",
     "\n",
@@ -273,7 +271,7 @@
     "\n",
     "$$  \\text{Kurtosis} = \\sum_{i=1}^{n} \\frac{(X_{i}-\\bar{X})^{4}/N}{s^{4}}$$\n",
     "\n",
-    "A normal distribution has a kurtosis = $3$. A fat tail distribution has a kurtosis > $3$. A thin tail distribution has a kurtosis < $3$. Any statistical application has a function to calculate kurtosis. Some statistical applications can mean excess kurtosis as kurtosis. **Excess kurtosis** is kurtosis – $3$. When a distribution with excess kurtosis = $0$, this distribution is a normal distribution. Be sure to check the selected statistical application’s manual to verify the definition of kurtosis used in the application.\n",
+    "A normal distribution has a kurtosis = $3$. A fat tail distribution has a kurtosis > $3$. A thin tail distribution has a kurtosis < $3$. Any statistical application has a function to calculate kurtosis. Some statistical applications can mean excess kurtosis as kurtosis. **Excess kurtosis** is $\\textit{kurtosis} – 3$. When a distribution with excess kurtosis = $0$, this distribution is a normal distribution. Be sure to check the selected statistical application’s manual to verify the definition of kurtosis used in the application.\n",
     "\n",
     "Both skewness and kurtosis are aimed to help us better understand the shape of a data distribution. If we want to check whether a dataset is normally distributed, we can draw the graph and check its skewness and kurtosis. However, the best way is to conduct a Shapiro–Wilk test, as described in the last lesson. "
    ]
@@ -284,7 +282,7 @@
     "id": "uM2AztcaBfrI"
    },
    "source": [
-    "## **4. Skew-Normal Distribution and Skew-t Distribution**"
+    "## **3. Skew-Normal Distribution and Skew-t Distribution**"
    ]
   },
   {
@@ -302,7 +300,7 @@
     "id": "XuqXW6UYBfj9"
    },
    "source": [
-    "### **4.1 The Basics of Skew-Normal Distribution**"
+    "### **3.1 The Basics of Skew-Normal Distribution**"
    ]
   },
   {
@@ -329,22 +327,19 @@
    "source": [
     "# Simulated Skew-Normal Distributions with Different Shape Parameters\n",
     "plt.figure(figsize=(12, 7))\n",
-    "x = np.linspace(0, 40, 100)\n",
+    "x = np.linspace(0, 60, 100)\n",
     "\n",
-    "params1 = (0.8, 25, 2)\n",
-    "plt.plot(\n",
-    "    x, stats.skewnorm.pdf(x, *params1), c=\"r\", label=\"alpha= {:.2f}\".format(params1[0])\n",
-    ")\n",
+    "alpha = 5\n",
+    "plt.plot(x, stats.skewnorm.pdf(x, alpha, loc=30, scale=7), \n",
+    "         c=\"g\", label=\"alpha= {:.2f}\".format(alpha))\n",
     "\n",
-    "params2 = (0, 25, 2)\n",
-    "plt.plot(\n",
-    "    x, stats.skewnorm.pdf(x, *params2), c=\"k\", label=\"alpha= {:.2f}\".format(params2[0])\n",
-    ")\n",
+    "alpha = 0\n",
+    "plt.plot(x, stats.skewnorm.pdf(x, alpha, loc=30, scale=7), \n",
+    "         c=\"r\", label=\"alpha= {:.2f}\".format(alpha))\n",
     "\n",
-    "params3 = (-0.8, 25, 2)\n",
-    "plt.plot(\n",
-    "    x, stats.skewnorm.pdf(x, *params3), c=\"g\", label=\"alpha={:.2f}\".format(params3[0])\n",
-    ")\n",
+    "alpha = -5\n",
+    "plt.plot(x, stats.skewnorm.pdf(x, alpha, loc=30, scale=7), \n",
+    "         c=\"k\", label=\"alpha={:.2f}\".format(alpha))\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -367,9 +362,9 @@
     "\n",
     "$\\phi(x)$ is the standard normal density function and $\\Phi(\\alpha x)$ is the standard normal (cumulative) distribution function. $\\alpha$ is a **shape parameter**. Figure 4 shows skew-normal distributions with different $\\alpha$'s. Here are some properties about $\\alpha$:\n",
     "\n",
-    "> - When $\\alpha = 0$, skew-normal distribution is standard normal distribution (black curve in figure 4).\n",
-    "> - When $\\alpha > 0$, skew-normal distribution is a right-skew distribution (red curve in figure 4).\n",
-    "> - When $\\alpha < 0$, skew-normal distribution is a left-skew distribution (green curve in figure 4).\n",
+    "> - When $\\alpha = 0$, skew-normal distribution is standard normal distribution (red curve in figure 4).\n",
+    "> - When $\\alpha > 0$, skew-normal distribution is a right-skew distribution (green curve in figure 4).\n",
+    "> - When $\\alpha < 0$, skew-normal distribution is a left-skew distribution (black curve in figure 4).\n",
     "> - When $|\\alpha|$ increases, the peak of the distribution will move farther to either the right side or left side.\n",
     "\n",
     "Skew-normal distribution and its related distribution families are heavy on math calculations. One tricky part is that skew-normal has two ways to express its parameters: **direct parameters** (DP) and **centered parameters** (CP). They exist due to maximum likelihood optimization calculations. We will not go into detail about these technicalities here. Let’s talk about what they are and what we need to pay attention to when using them with skew-normal distribution.\n",
@@ -405,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.2 U.S. 10-Year Treasury Bond Yield Daily Return and Skew-Normal Distribution**\n",
+    "### **3.2 U.S. 10-Year Treasury Bond Yield Daily Return and Skew-Normal Distribution**\n",
     "\n",
     "We talked about the basics of skew-normal distribution in the last section. Now let’s apply this method to our U.S. 10-Year Treasury Bond Yield Daily Return data. The data spans from the beginning of 2016 to the end of 2021. Here are some statistics from the data."
    ]
@@ -502,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.3 The Basics of Skew-t Distribution**\n",
+    "### **3.3 The Basics of Skew-t Distribution**\n",
     "\n",
     "A skew-t distribution is like a Student’s t-distribution with the flexibility to adjust for the heaviness of the tails. Student’s t-distribution is a symmetric distribution that has heavier tails than normal distribution. Usually Student’s t-distribution is used when the data distribution is symmetric but the tails are thicker or longer than Normal distribution. In this section, we are going to introduce a distribution that is like Student’s t-distribution but can both handle skewness and kurtosis. This is skew-t distribution.\n",
     "\n"
@@ -556,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **4.4 U.S. 10-Year Treasury Bond Yield Daily Return and Skew-t Distribution**\n",
+    "### **3.4 U.S. 10-Year Treasury Bond Yield Daily Return and Skew-t Distribution**\n",
     "\n",
     "We tried to use skew-normal to fit the U.S. 10-Year Treasury Bond Yield Daily Return data in the last section. However, skew-normal distribution cannot describe well the heavy right tail nature of the U.S. 10-Year Treasury Bond Yield Daily Return data. In this section, let’s try skew-t distribution to see if this distribution can do a better job."
    ]
@@ -608,7 +603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **5. Conclusion**\n",
+    "## **4. Conclusion**\n",
     "\n",
     "In this lesson, we discussed what skewness and kurtosis are. We talked about the patterns of skewness and its measurement. We also talked about the patterns of kurtosis and its measurement. Built on the knowledge of skewness and kurtosis, we introduced skew normal distribution and skew-t distribution to handle normal distribution like a dataset but with skewness and thick tails. We went through the basics of skew normal distribution and skew-t distribution. We then applied these distributions to our U.S. Treasury Bond Yield and U.S. stock index example. In the next lesson, we will explore the metrics to calculate relationships among random variables. "
    ]
@@ -674,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
