--- a/module-4/lesson-3/Lesson Notes - ECON_Module 4_Lesson 3.ipynb
+++ b/module-4/lesson-3/Lesson Notes - ECON_Module 4_Lesson 3.ipynb
@@ -517,7 +517,7 @@
    "source": [
     "**Figure 5: ACF and PACF Plot Features for AR($𝑝$) and MA($𝑞$)**\n",
     "\n",
-    "|           | ACF Plot Feature         | ACF Plot Feature          |\n",
+    "|           | ACF Plot Feature         | PACF Plot Feature          |\n",
     "| :---:     | :---:                    | :---:                     |\n",
     "| AR($ p $) | Tail off                 | Cut off after $ p $ lags  |\n",
     "| MA($ q $) | Cut off after $ q $ lags | Tail off                  |\n"
