--- a/module-5/lesson-3/Lesson Notes - ECON_Module 5_Lesson 3.ipynb
+++ b/module-5/lesson-3/Lesson Notes - ECON_Module 5_Lesson 3.ipynb
@@ -269,6 +269,7 @@
     "    step_mcmc0 = pm.Slice()\n",
     "    trace_mcmc0 = pm.sample(\n",
     "        2000,\n",
+    "        cores=2,\n",
     "        step=step_mcmc0,\n",
     "        tune=0,  # tune=0 => no burn-in\n",
     "        return_inferencedata=False,\n",
@@ -399,6 +400,7 @@
     "    step_mmc = pm.Slice()\n",
     "    trace_mmc = pm.sample(\n",
     "        2000,\n",
+    "        cores=2,\n",
     "        step=step_mmc,\n",
     "        tune=0,  # no burn-in\n",
     "        return_inferencedata=False,\n",
@@ -475,6 +477,7 @@
     "    step_mmc_a = pm.Slice()\n",
     "    trace_mmc_a = pm.sample(\n",
     "        2000,\n",
+    "        cores=2,\n",
     "        step=step_mmc_a,\n",
     "        tune=250,  # burn-in = 250 steps\n",
     "        return_inferencedata=False,\n",
@@ -622,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
