--- a/module-6/lesson-1/Lesson Notes - ECON_Module 6_Lesson 1.ipynb
+++ b/module-6/lesson-1/Lesson Notes - ECON_Module 6_Lesson 1.ipynb
@@ -197,7 +197,7 @@
     "$$ H_0: \\gamma = 0 $$\n",
     "$$ H_1: \\gamma \\neq 0 $$\n",
     "\n",
-    "The above Dickey Fuller test is equivalent to test if $\\alpha=1$. However, under $H_0$, the time series is not stationary and the usual normal distribution tests do not apply. The test statistic we will use is known as a unit root test statistic or Dickey Fuller (DF) statistic. When you run a Dickey Fuller test with statistical software, it will usually provide you with the critical test values at 1%, 5%, and 10% levels. If you set the significance level at 5% and the DF statistic < 5% critical value, you fail to reject $H_0$. This means there is a unit root for $x_t$. We will talk more about this when we demonstrate the test with an example. \n",
+    "The above Dickey Fuller test is equivalent to test if $\\alpha=1$. However, under $H_0$, the time series is not stationary and the usual normal distribution tests do not apply. The test statistic we will use is known as a unit root test statistic or Dickey Fuller (DF) statistic. When you run a Dickey Fuller test with statistical software, it will usually provide you with the critical test values at 1%, 5%, and 10% levels. If you set the significance level at 5% and the DF statistic > 5% critical value, you fail to reject $H_0$. This means there is a unit root for $x_t$. We will talk more about this when we demonstrate the test with an example. \n",
     "\n",
     "There are three main versions of Dickey Fuller tests:\n",
     "\n",
@@ -678,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
