--- a/module-6/lesson-3/Lesson Notes - ECON_Module 6_Lesson 3.ipynb
+++ b/module-6/lesson-3/Lesson Notes - ECON_Module 6_Lesson 3.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "# Convert date variable to date format\n",
     "forex[\"Date2\"] = pd.to_datetime(forex[\"Date\"], format=\"%m/%d/%Y\")\n",
-    "forex = forex.loc[:, [\"Date2\", \"AUDUSD\", \"NZDUSD\", \"USDCAD\"]].set_index(\"Date2\")"
+    "forex = forex.loc[:, [\"Date2\", \"AUDUSD\", \"NZDUSD\", \"USDCAD\"]].set_index(\"Date2\")[64:]"
    ]
   },
   {
@@ -505,7 +505,7 @@
     "id": "cMSzCz39Lybe"
    },
    "source": [
-    "Figure 6 shows the ECM results for AUSDUSD and NZDUSD. From the results, we can see all coefficient estimates are significant. $\\lambda$ is AUDUSD.L1 = -0.0138, which meets our criteria to be between $0$ and $-1$. It means if the AUDUSD exchange rate deviates 1 point from the long-term equilibrium with NZDUSD at time $t-1$, AUDUSD will drop 0.0138 point at time $t$ to bring it back to long-term equilibrium. \n",
+    "Figure 6 shows the ECM results for AUSDUSD and NZDUSD. From the results, we can see all coefficient estimates are significant. $\\lambda$ is AUDUSD.L1 = -0.0157, which meets our criteria to be between $0$ and $-1$. It means if the AUDUSD exchange rate deviates 1 point from the long-term equilibrium with NZDUSD at time $t-1$, AUDUSD will drop 0.0157 point at time $t$ to bring it back to long-term equilibrium. \n",
     "\n",
     "Next, let’s check the residuals to see if there is any autocorrelation issue. We will run the Durbin-Watson test. Figure 7 shows the result.\n"
    ]
