--- a/module-6/lesson-4/Lesson Notes - ECON_Module 6_Lesson 4.ipynb
+++ b/module-6/lesson-4/Lesson Notes - ECON_Module 6_Lesson 4.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "# Convert date variable to date format\n",
     "forex[\"Date2\"] = pd.to_datetime(forex[\"Date\"], format=\"%m/%d/%Y\")\n",
-    "forex = forex.loc[:, [\"Date2\", \"AUDUSD\", \"NZDUSD\", \"USDCAD\"]].set_index(\"Date2\")"
+    "forex = forex.loc[:, [\"Date2\", \"AUDUSD\", \"NZDUSD\", \"USDCAD\"]].set_index(\"Date2\")[64:]"
    ]
   },
   {
@@ -428,9 +428,9 @@
     "id": "WZoogn21loVq"
    },
    "source": [
-    "Figure 5 shows the result of the Johansen trace test. The top part in Figure 5 shows the result for three tests: $H_0$: rank = $0$, $H_0$: rank = $1$, and $H_0$: rank = $2$. Let’s use 5% as our decision point. For $H_0$: rank = $0$ we can see the test statistic is 34.913 and the 5% critical value is 29.796. We reject $H_0$ and say the rank is not $0$ or a cointegration relationship would exist. Next, we investigate $H_0$: rank = $1$. The test statistic is 17.588 and the 5% critical value is 15.494. Hence, we cannot reject $H_0$: rank = $1$. There is one linear combination of three time series variables that is stationary. The coefficients of the linear combination are in the second part under '*Cointegration relations for loading-coefficients-column 1*' heading. We can write the linear combination as follows:\n",
+    "Figure 5 shows the result of the Johansen trace test. The top part in Figure 5 shows the result for three tests: $H_0$: rank = $0$, $H_0$: rank = $1$, and $H_0$: rank = $2$. Let’s use 5% as our decision point. For $H_0$: rank = $0$ we can see the test statistic is 32.8897 and the 5% critical value is 29.7961. We reject $H_0$ and say the rank is not $0$ or a cointegration relationship would exist. Next, we investigate $H_0$: rank = $1$. The test statistic is 14.7392 and the 5% critical value is 15.4943. Hence, we cannot reject $H_0$: rank = $1$. There is one linear combination of three time series variables that is stationary. The coefficients of the linear combination are in the second part under '*Cointegration relations for loading-coefficients-column 1*' heading. We can write the linear combination as follows:\n",
     "\n",
-    "$$ S = 0.19543292 + 1 \\cdot AUDUSD -1.1719575 \\cdot NZDUSD – 0.16022276 \\cdot CADUSD $$\n",
+    "$$ S = 0.1539131 + 1 \\cdot AUDUSD -1.1497011 \\cdot NZDUSD -0.1245218 \\cdot CADUSD $$\n",
     "\n",
     "The above equation is the deviation from the long-term equilibrium of the three time series. Let’s check out the plot to see if this deviation is stationary.\n"
    ]
@@ -451,8 +451,8 @@
     "# Time Plot for Deviation from Long-Term Equilibrium\n",
     "\"\"\"\n",
     "The precise coefficients of the linear combination are in:\n",
-    "vecm_model.const_coint and vecm_model.beta\n",
-    "S = 0.19543292 + 1*vecm_data.AUDUSD - 1.1719575*vecm_data.NZDUSD - 0.16022276*vecm_data.CADUSD\n",
+    "vecm_model.const_coint and vecm_model.beta \n",
+    "S = 0.1539131 + 1*vecm_data.AUDUSD - 1.1497011*vecm_data.NZDUSD - 0.1245218*vecm_data.CADUSD\n",
     "\"\"\"\n",
     "S = (\n",
     "    vecm_model.const_coint[0][0]\n",
@@ -498,7 +498,7 @@
     "id": "h8XLc_EGloDu"
    },
    "source": [
-    "From figure 7, we can see that we easily reject that the deviation has a unit root because the test statistic (-3.997) is below 5% critical value (-1.94). \n"
+    "From figure 7, we can see that we easily reject that the deviation has a unit root because the test statistic (-4.198) is below 5% critical value (-1.94). \n"
    ]
   },
   {
@@ -584,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
