--- a/module-7/lesson-4/Lesson Notes - ECON_Module 7_Lesson 4.ipynb
+++ b/module-7/lesson-4/Lesson Notes - ECON_Module 7_Lesson 4.ipynb
@@ -158,8 +158,8 @@
     "\n",
     "\n",
     "> - When $X_a$ and $Y_a$ is from type a, $P(K_a|X_a,Y_a) \\gt P(K_b|X_b,Y_b)$ and $P(K_c|X_c,Y_c)$ \\\\\n",
-    "> - When $X_b$ and $Y_b$ is from type a, $P(K_b|X_b,Y_b) \\gt P(K_a|X_a,Y_a)$ and $P(K_c|X_c,Y_c)$ \\\\\n",
-    "> - When $X_c$ and $Y_c$ is from type a, $P(K_c|X_c,Y_c) \\gt P(K_a|X_a,Y_a)$ and $P(K_b|X_b,Y_b)$\n",
+    "> - When $X_b$ and $Y_b$ is from type b, $P(K_b|X_b,Y_b) \\gt P(K_a|X_a,Y_a)$ and $P(K_c|X_c,Y_c)$ \\\\\n",
+    "> - When $X_c$ and $Y_c$ is from type c, $P(K_c|X_c,Y_c) \\gt P(K_a|X_a,Y_a)$ and $P(K_b|X_b,Y_b)$\n",
     "\n",
     "LDA supplies a model which creates a system to tell us the conditional probability of the data point being of each type given the input data . Furthermore, the model assigns the type with the highest conditional probability as the type from which input data comes from. From our above system, $X$ and $Y$ are assigned to type-a group when the conditional probability of being type-a is the highest compared to the conditional probability of being type-b or being type-c.\n",
     "\n",
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
