--- a/module-3/lesson-1/Lesson Notes - ECON_Module 3_Lesson 1.ipynb
+++ b/module-3/lesson-1/Lesson Notes - ECON_Module 3_Lesson 1.ipynb
@@ -230,7 +230,7 @@
     "  \\binom{3}{0} (0.5)^{3} (0.5)^{0} = 0.125  &  \\text{ if } X=0 \\\\ \n",
     "  \\binom{3}{1} (0.5)^{2} (0.5)^{1} = 0.375  &  \\text{ if } X=1 \\\\ \n",
     "  \\binom{3}{2} (0.5)^{1} (0.5)^{2} = 0.375  &  \\text{ if } X=2 \\\\ \n",
-    "  \\binom{3}{3} (0.5)^{0} (0.5)^{3} = 0.175  &  \\text{ if } X=3 \n",
+    "  \\binom{3}{3} (0.5)^{0} (0.5)^{3} = 0.125  &  \\text{ if } X=3 \n",
     "\\end{cases} $$\n",
     "\n",
     "Where $ \\binom{3}{0}, \\binom{3}{1}, \\binom{3}{2}, \\binom{3}{3}$ are binomial coefficients\n",
@@ -584,17 +584,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "216bb831-2b27-45b1-be45-e30aff2d2730",
-    "outputId": "cfab6e94-f255-4ed3-b85b-edcba415382d"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Empirical Distribution function\n",
     "\n",
     "M = [8, 9, 9, 0, 2, 4, 5, 5, 5, 9]\n",
-    "meand = np.mean(M)\n",
-    "std = np.std(M)\n",
     "\n",
     "# Empirical Cumulative distribution function\n",
     "ecd_function = ECDF(M)\n",
@@ -651,10 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "c81e97b7-1957-4b89-9623-80054e6a0436",
-    "outputId": "2f9e9071-4152-4643-a9b6-fa403b6a9425"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# EDF overlay with NCDF\n",
@@ -662,13 +654,14 @@
     "\n",
     "# EDF plot\n",
     "plt.plot(ecd_function.x[1:], ecd_function.y[1:], drawstyle=\"steps-post\")\n",
-    "plt.xlabel(\"X\")\n",
-    "plt.ylabel(\"Empirical Distribution\")\n",
     "\n",
-    "# NCDF plot\n",
-    "mymodel = np.poly1d(np.polyfit(ecd_function.x[1:], ecd_function.y[1:], 2))\n",
-    "myline = np.linspace(0, 10, 100)\n",
-    "plt.plot(myline, mymodel(myline))\n",
+    "# CDF plot\n",
+    "x = np.linspace(0, 10, 100)\n",
+    "y = stats.norm.cdf(x, np.mean(M), np.std(M))\n",
+    "plt.plot(x, y)\n",
+    "\n",
+    "plt.xlabel(\"X\")\n",
+    "plt.ylabel(\"EDF vs CDF\")\n",
     "plt.show()"
    ]
   },
@@ -876,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
